# scizor_extension

./: README.md  pyproject.toml
scizor_extension/: __init__.py  deduplicator.py  encoders.py  progress_predictor.py  scizor_filter.py
